# music_maker

./: MANIFEST.in  README.md  setup.cfg  setup.py
assets/: a.xcf  blank_note.xcf
raw_assets/: A_high.xcf  A_low.xcf  B.xcf  B_high.xcf  B_low.xcf  C_high.xcf  C_low.xcf  D_high.xcf  D_low.xcf  E_high.xcf  E_low.xcf  F.xcf  G_high.xcf  background_cat.xcf  bar.xcf  hold.xcf  lighting_bolt.xcf  play_button.xcf  rest.xcf  wild.xcf
src/maker/: version.py
src/maker/gui/: bar.py  gui.py  measure.py  note.py  note_on_bar.py
src/maker/gui/assets/: __init__.py
src/maker/music/: music.py  note.py  tune.py
