[metadata]
name = maker
author = Tyler Westland, Aaron Ruen
author-email = westlatr@mail.uc.edu ruenan@mail.uc.edu
url = https://github.com/I-question-this/???
description = 
long-description = file: README.md, LICENSE
license = GNU General Public License, Version 3.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.9
install_requires =
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

